--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,17 @@
 <resources>
     <string name="app_name">HitList</string>
-    <string name="empty">Your list HitList is empty. Please add something to do.</string>
+    <string name="emptyScheme">Your list HitList is empty. Please add something to do.</string>
+    <string name="emptyMilestone">Your list HitList is empty. Please add something to do.</string>
+    <string name="emptyTask">Your list HitList is empty. Please add something to do.</string>
     <string name="add_Scheme">Add Scheme</string>
-    <string name="enter_desc">Describe this Scheme</string>
-    <string name="enter_scheme">Name of Scheme</string>
+    <string name="add_milestone">Add Milestone</string>
+    <string name="add_task">Add Task</string>
+    <string name="scheme_desc">Describe this Scheme</string>
+    <string name="scheme_name">Name of Scheme</string>
+    <string name="milestone_desc">Describe this Milestone</string>
+    <string name="milestone_name">Name of Milestone</string>
+    <string name="task_desc">Describe this Task</string>
+    <string name="task_name">Name of Task</string>
     <string name="update">Update</string>
     <string name="delete">Delete</string>
 </resources>
