--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="task_desc">Describe this Task</string>
     <string name="task_name">Name of Task</string>
     <string name="update">Update</string>
+    <string name="edit">Edit</string>
     <string name="delete">Delete</string>
 </resources>
