Scheme working (no status)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">HitList</string>
-    <string name="emptyScheme">Your list HitList is empty. Please add something to do.</string>
-    <string name="emptyMilestone">Your list HitList is empty. Please add something to do.</string>
+    <string name="emptyScheme">Your HitList is empty. Please add something to do.</string>
+    <string name="emptyMilestone">You have not yet added a milestone for this scheme.</string>
     <string name="emptyTask">Your list HitList is empty. Please add something to do.</string>
     <string name="add_Scheme">Add Scheme</string>
     <string name="add_milestone">Add Milestone</string>
