--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="emptyScheme">Your HitList is empty. Please add something to do.</string>
     <string name="emptyMilestone">You have not yet added a milestone for this scheme.</string>
     <string name="emptyTask">You have not yet added a task for this milestone</string>
-    <string name="add_Scheme">Add Scheme</string>
+    <string name="add_scheme">Add Scheme</string>
     <string name="add_milestone">Add Milestone</string>
     <string name="add_task">Add Task</string>
     <string name="scheme_desc">Describe this Scheme</string>
@@ -17,4 +17,11 @@
     <string name="add">Add</string>
     <string name="delete">Delete</string>
     <string name="done">Mark As Done</string>
+
+    <string name="app_scheme">Schemes</string>
+    <string name="app_milestone">Milestones</string>
+    <string name="app_task">Tasks</string>
+    <string name="edit_task">Edit Task</string>
+    <string name="edit_milestone">Edit Milestone</string>
+    <string name="edit_scheme">Edit Scheme</string>
 </resources>
